# cpp_chat_server

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/client/: CMakeLists.txt  Client.cpp  Client.hpp  ClientArgumentsParser.cpp  ClientArgumentsParser.hpp  IClient.cpp  IClient.hpp  IClientBuilder.cpp  IClientBuilder.hpp  InputArguments.hpp  PlainClient.cpp  PlainClient.hpp  PlainClientBuilder.cpp  PlainClientBuilder.hpp  SslClient.cpp  SslClient.hpp  SslClientBuilder.cpp  SslClientBuilder.hpp  main.cpp
src/common/: LoginData.hpp  Message.cpp  Message.hpp  MessageBlock.cpp  MessageBlock.hpp  MessageBlockDescriptor.hpp  MessageBuilder.cpp  MessageBuilder.hpp
src/server/: CMakeLists.txt  ChatSpace.cpp  ChatSpace.hpp  ChatUser.cpp  ChatUser.hpp  IChatUser.cpp  IChatUser.hpp  IServer.cpp  IServer.hpp  IServerBuilder.cpp  IServerBuilder.hpp  IUserLoginValidator.cpp  IUserLoginValidator.hpp  InputArguments.hpp  PlainServer.cpp  PlainServer.hpp  PlainServerBuilder.cpp  PlainServerBuilder.hpp  PlainUserLoginValidator.cpp  PlainUserLoginValidator.hpp  Server.cpp  Server.hpp  ServerArgumentsParser.cpp  ServerArgumentsParser.hpp  SslChatUser.cpp  SslChatUser.hpp  SslServer.cpp  SslServer.hpp  SslServerBuilder.cpp  SslServerBuilder.hpp  main.cpp
sslkeys/: private.key  request.csr  selfsigned.crt  setup_crt.txt
tests/: CMakeLists.txt  CommonMessagesTests.cpp  ServerArgumentsParserTests.cpp
